on-prem-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: onprem-issuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
  name: example
spec:
  ingressClassName: nginx
  rules:
  - host: '*.uengine.solutions'
    http:
      paths:
      - backend:
          service:
            name: ide-proxy
            port:
              number: 1338
        path: /
        pathType: Prefix
  - host: www.uengine.solutions
    http:
      paths:
      - backend:
          service:
            name: on-prem-on-prem-helm
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: acebase.uengine.solutions
    http:
      paths:
      - backend:
          service:
            name: acebase
            port:
              number: 5757
        path: /
        pathType: Prefix
  - host: api.uengine.solutions
    http:
      paths:
      - backend:
          service:
            name: api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: file.uengine.solutions
    http:
      paths:
      - backend:
          service:
            name: file-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '*.uengine.solutions'
    secretName: onprem-tls
